<resources>
    <string name="app_name">okCredit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_customer">Add Customer</string>
    <string name="Rs">\u20B9</string>
    <string name="search_add">Search or Add</string>
    <string name="okcredit">OkCredit</string>
    <string name="language">Language</string>
    <string name="by_continuing_you_agree_to_our">By continuing you agree to our </string>
    <string name="terms_and_service"><u>Terms and service </u></string>
    <string name="and">and </string>
    <string name="next">NEXT</string>
    <string name="privacy_policy"><u>Privacy policy </u></string>
    <string name="my_hint">Mobile Number</string>
    <string name="icon_of_the_okcredit">icon of the okCredit</string>
    <string name="todo">TODO</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="welcome">Welcome</string>
    <string name="select_your_language">Select your Language</string>
    <string name="your_otp_will_be_delivered_soon_on">Your OTP will be delivered soon on</string>
    <string name="edit_mobile">Edit Mobile</string>
    <string name="skip">Skip</string>
    <string name="enter_your_business_name">Enter Your Business"\n"Name</string>
    <string name="business_name">Business Name</string>
    <string name="your_name_will_be_displayed_on_any_transactional">Your name will be displayed on any transactional SMS delivered to your customer</string>
    <string name="please_be_patience">Please be patience</string>
    <string name="due">Due</string>
    <string name="advance">Advance</string>
    <string name="send_payment_reminder">Send Payment reminder</string>
    <string name="safe_secure_trans">Your transactions with &lt;b&gt;%1$s&lt;/b&gt; are completely secure and private.</string>
    <string name="photo_added">Photo Added</string>
    <string name="forgot_pwd">Forgot Password</string>
    <string name="add_note_optional">Add Note (Optional)</string>
    <string name="now_you_may_accept_payment_without_password_confirmation_to_enable_payment">Disable payment password. To turn on payment password, go to your security settings</string>
    <string name="where_do_you_want_choose_from">Where do you want to choose from?</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="valid_amount">Please enter valid amount</string>
    <string name="payment_details">Payment Details</string>
    <string name="sms_delivered">SMS delivered</string>
    <string name="deleted_on">Deleted On</string>
    <string name="share_on_whatsapp">Share on WhatsApp</string>
    <string name="sync_successful">Sync successful</string>
    <string name="delete_credit">Delete Credit</string>
    <string name="delete_payment">Delete Payment</string>
    <string name="delete_msg">Are you sure you want to delete this transaction?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="contacts">Contacts</string>
    <string name="import_phone_contact">Import Phone Contact</string>
    <string name="add_new_suppliers_directly_from">Add new suppliers directly from"\n"phonebook</string>
    <string name="clear">Clear</string>
    <string name="filter">Filter</string>
    <string name="reminder_date">Reminder Date</string>
    <string name="today">Today</string>
    <string name="pending">Pending</string>
    <string name="upcoming">Upcoming</string>
    <string name="sort_by">Sort By</string>
    <string name="name">  Name</string>
    <string name="amount">   Amount</string>
    <string name="latest">   Latest</string>
    <string name="downloading_your_data">Downloading your Data</string>
    <string name="balance">Balance</string>
    <string name="send">send</string>
    <string name="txn_add_credit_btn">Give\nCredit</string>
    <string name="number">number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="add_contact">Add contact</string>
    <string name="import_contact">Import contact</string>
    <string name="verification_successful">Verification Successful</string>
    <string name="received">Received</string>
    <string name="given">Given</string>
    <string name="add_credit">Add Credit</string>
    <string name="search_or_add">Search or Add</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="customers">Customers</string>
    <string name="account_statement">Account Statement</string>
    <string name="net_balance">Net Balance</string>
    <string name="customer_khata">Customer Khata</string>
    <string name="supplier_khata">Supplier Khata</string>
    <string name="customer">Customer</string>
    <string name="supplier">Supplier</string>
    <string name="added_on_09_mar_2021">13-03-2021 </string>
    <string name="add_from_contacts">To quickly add from contacts</string>
    <string name="add_supplier">Add Supplier</string>

    <string name="menu_account">Account</string>
    <string name="menu_home">Home</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help Support</string>

    <string name="logout">Sign Out</string>
    <string name="logoutMsg">Are you sure you want to Sign out?</string>
    <string name="share_using">Share via</string>
</resources>