<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_helpandSupport"
            android:icon="@drawable/ic_menu_technical_support"
            android:title="@string/menu_help" />
    </group>
    <group android:id="@+id/gr_sign_out">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_power_green"
            android:title="Logout" />
    </group>
</menu>