<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home" >

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.okcredit.Navigation.HomeFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_nav_home_to_nav_helpandSupport2"
            app:destination="@id/nav_helpandSupport" />
        <action
            android:id="@+id/action_nav_home_to_nav_account"
            app:destination="@id/nav_account" />
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow2"
            app:destination="@id/nav_slideshow" />
        <action
            android:id="@+id/action_nav_home_to_nav_gallery2"
            app:destination="@id/nav_gallery" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.okcredit.Navigation.GalleryFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.okcredit.Navigation.SlideshowFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_helpandSupport"
        android:name="com.example.okcredit.Navigation.HelpSupportFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fagment_helpsupport" />
    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.okcredit.Navigation.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />
</navigation>