<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.activities.MobileNumberActivity">

    <ImageView
        android:id="@+id/okCreditLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/white"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_okcredit" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_2"
        android:layout_marginTop="@dimen/dp_20"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="@string/okcredit"
        android:textColor="@color/okcredit"
        android:textSize="@dimen/sp_22"
        app:layout_constraintBottom_toBottomOf="@+id/okCreditLogo"
        app:layout_constraintStart_toEndOf="@+id/okCreditLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSkipBusinessName"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_8"
        android:background="@drawable/edit_mobile"
        android:gravity="center"
        android:paddingStart="@dimen/dp_25"
        android:paddingEnd="@dimen/dp_25"
        android:text="@string/skip"
        android:textSize="@dimen/sp_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAgree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="@string/by_continuing_you_agree_to_our"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_15"
        android:backgroundTint="@color/okcredit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvAgree"
        app:layout_constraintEnd_toStartOf="@+id/btnEnterBusinessName"
        app:layout_constraintStart_toStartOf="@id/tvAgree">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etBusinessName"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_cell_phone_1"
            android:drawablePadding="@dimen/dp_8"
            android:fontFamily="sans-serif-light"
            android:hint="@string/business_name"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnEnterBusinessName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_15"
        android:background="@drawable/round_btn_bg"
        android:src="@drawable/ic_baseline_check_24"
        app:layout_constraintBottom_toTopOf="@+id/tvAgree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout3" />

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_7"
        android:fontFamily="sans-serif-medium"
        android:text="@string/enter_your_business_name"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_25"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:srcCompat="@drawable/ic_hut__1__1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_7"
        android:fontFamily="serif-monospace"
        android:text="@string/your_name_will_be_displayed_on_any_transactional"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout3" />


</androidx.constraintlayout.widget.ConstraintLayout>