<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/btn_cross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:padding="@dimen/dp_10"
        app:layout_constraintBottom_toTopOf="@id/view_below_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_clear_24" />

    <TextView
        android:id="@+id/tv_add_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:padding="@dimen/dp_10"
        android:text="@string/add_customer"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        app:layout_constraintStart_toEndOf="@+id/btn_cross"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_below_search"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_1"
        android:layout_margin="@dimen/dp_10"
        android:background="@color/greyfor"
        android:elevation="@dimen/dp_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_customer"
        tools:layout_editor_absoluteX="75dp" />

    <ImageView
        android:id="@+id/tv_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_below_search"
        app:srcCompat="@drawable/ic_arrow_right" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_15"
        android:src="@drawable/ic_phone_book"
        app:civ_border_color="@color/okCredit"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_below_search" />

<!--    <ImageView-->
<!--        android:id="@+id/imageView6"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="@dimen/dp_15"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/tv_circle"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/view_below_search"-->
<!--        app:srcCompat="@drawable/ic_phone_book" />-->

    <TextView
        android:id="@+id/tv_add_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/add_contact"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_circle" />

    <TextView
        android:id="@+id/btn_add_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:text="@string/import_contact"
        android:textColor="@color/okCredit"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_contact" />

    <View
        android:id="@+id/view_end"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/dp_5"
        android:background="@color/greyfor"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:backgroundTint="@color/okcredit"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_save_number"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_cell_phone_1"
            android:drawablePadding="@dimen/dp_5"
            android:fontFamily="sans-serif-light"
            android:hint="@string/number"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_save_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/round_btn_bg"
        android:src="@drawable/ic_baseline_check_24"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/view_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:backgroundTint="@color/okcredit"
        app:layout_constraintBottom_toTopOf="@+id/tl_number"
        app:layout_constraintEnd_toStartOf="@+id/btn_save_name"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="@dimen/dp_5"
            android:fontFamily="sans-serif-light"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_save_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/round_btn_bg"
        android:padding="@dimen/dp_5"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toTopOf="@+id/tl_number"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/view_above_input"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/dp_10"
        android:background="@color/greyfor"
        android:elevation="@dimen/dp_2"
        app:layout_constraintBottom_toTopOf="@id/tl_name"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>